# Synomosia

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bake.py  scrape.py
src/: lib.rs
src/synomosia/: __init__.py  _core.pyi  _llm_categorizer.py  _query.py  _scraper.py  _store.py
tests/: conftest.py  test_llm_categorizer.py  test_query.py  test_scraper.py
