[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synomosia"
version = "1.0.0a0"
description = "Conspiracy theories, hidden histories, and suppressed knowledge"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Andrew Watts", email = "andrewkwatts@gmail.com"},
]
keywords = ["conspiracy", "history", "secret societies", "hidden knowledge", "alternative history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "eyecore[feed]>=1.0.0a0",
]

[project.optional-dependencies]
bake = [
    "requests>=2.28",
]
scrape = [
    "feedparser>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "praw>=7.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/andrewkwatts-maker/Synomosia"
Repository = "https://github.com/andrewkwatts-maker/Synomosia"
Issues = "https://github.com/andrewkwatts-maker/Synomosia/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/synomosia"]
artifacts = ["src/synomosia/_data/*.db.gz"]
